Other `Stream::toList` conversions (#7508)